overflow fix 2

--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ html, body {
     background: -webkit-gradient(linear, left top, right bottom, from(#dd2d44), to(#b92883));
     background-repeat: no-repeat;
     background-attachment: fixed;
-    color: black;
-    overflow: hidden;
+    color: white;
+    transform: translate2d(0,0,0); 
 }
 
 nav{
